gccida/c1/record_one_set
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_one_set/src/gcse.c:1694:1: error: use of undeclared identifier 'reg_set_0'; did you mean 'reg_set_p'?
reg_set_0 **v4; // rcx 
^~~~~~~~~
reg_set_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_one_set/src/rtl.h:1469:12: note: 'reg_set_p' declared here
extern int reg_set_p                    PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_one_set/src/gcse.c:1694:13: error: use of undeclared identifier 'v4'
reg_set_0 **v4; // rcx 
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_one_set/src/gcse.c:1698:31: error: expected expression
reg_set_table = ( reg_set_0 **)grealloc( ( char *)reg_set_table, 8 * ( regno + 100)); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_one_set/src/gcse.c:1698:19: error: use of undeclared identifier 'reg_set_0'; did you mean 'reg_set_p'?
reg_set_table = ( reg_set_0 **)grealloc( ( char *)reg_set_table, 8 * ( regno + 100)); 
                  ^~~~~~~~~
                  reg_set_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_one_set/src/rtl.h:1469:12: note: 'reg_set_p' declared here
extern int reg_set_p                    PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_one_set/src/gcse.c:1715:1: error: use of undeclared identifier 'v4'
v4 = reg_set_table; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_one_set/src/gcse.c:1717:1: error: use of undeclared identifier 'v4'
v4[regno] = ( reg_set_0 *)object_base; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_one_set/src/gcse.c:1717:26: error: expected expression
v4[regno] = ( reg_set_0 *)object_base; 
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_one_set/src/gcse.c:1717:15: error: use of undeclared identifier 'reg_set_0'; did you mean 'reg_set_p'?
v4[regno] = ( reg_set_0 *)object_base; 
              ^~~~~~~~~
              reg_set_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_one_set/src/rtl.h:1469:12: note: 'reg_set_p' declared here
extern int reg_set_p                    PARAMS ((rtx, rtx));
           ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_one_set/src/obj/gcse.o] Error 1
